<resources>

    <!-- Titles App & Activities -->
    <string name="app_name">GasLabs</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_about">Acerca de GasLabs</string>
    <string name="title_activity_service">Service (Lab)</string>
    <string name="title_fragment_service">Service (Lab)</string>
    <string name="title_fragment_bluetooth">Bluetooth (Lab)</string>
    <string name="title_fragment_device">Device Detail (Lab)</string>
    <string name="title_activity_device">DeviceActivity</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_panel">Panel</string>
    <!-- Service -->
    <string name="action_service">Service</string>
    <string name="action_start_service">Start service</string>
    <string name="action_stop_service">Stop service</string>
    <string name="action_get_from_bound_service">Get value</string>
    <!-- Bluetooth -->
    <string name="action_bluetooth_enable">Enable</string>
    <string name="action_bluetooth_scan_start">Scan</string>
    <string name="action_bluetooth_scan_stop">Stop</string>
    <!-- Device -->
    <string name="action_device_connect">Connect</string>
    <string name="action_device_disconnect">Disconnect</string>

    <!-- Navigation view & Navigation drawer -->
    <string name="nav_drawer_open">Open drawer</string>
    <string name="nav_drawer_close">Close drawer</string>
    <string name="drawer_item_panel">Panel</string>
    <string name="drawer_item_service">Service</string>
    <string name="drawer_item_bluetooth">Bluetooth</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_sub_item_about">About</string>
    <string name="drawer_sub_item_help">Help</string>

    <!-- About -->
    <string name="about_item_version_title">Versión de la compilación</string>
    <string name="about_item_licenses_title">Licencias de código abierto</string>
    <string name="about_item_policies_title">Política de privacidad</string>
    <string name="about_item_terms_title">Condiciones del servicio</string>
    <string name="about_item_licences_subtitle">Detalles de la licencia de software de código abierto</string>

    <!-- Service -->
    <string name="service_goto_service">Go to service</string>

    <!-- Feedback -->
    <string name="snack_bar_option_already_selected">This option is already selected</string>
    <string name="snack_bar_bluetooth_already_enabled">Bluetooth already enabled</string>
    <string name="dialog_licenses_title">Open source libraries used by GasLabs</string>
    <string name="feedback_bluetooth_enabled_required">Please enable bluetooth</string>

    <!-- Scan device & Connect device -->
    <string name="device_state_connected">Conectado</string>
    <string name="device_state_disconnected">Desconectado</string>

    <!-- Feedback -->
    <string name="loading">Cargando</string>

    <!-- dummy -->
    <string name="dummy_email">gas@gaslabs.com</string>
    <string name="dummy_username">Gas Labs</string>
    <string name="empty" />


    <!-- Device detail -->
    <string name="device_detail">Device</string>

</resources>
