<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.programmers.wine.gaslabs.ui.home.HomeActivity">

    <item
        android:id="@+id/action_bluetooth_enable"
        android:orderInCategory="100"
        android:title="@string/action_bluetooth_enable"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bluetooth_scan_start"
        android:orderInCategory="200"
        android:title="@string/action_bluetooth_scan_start"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bluetooth_scan_stop"
        android:orderInCategory="300"
        android:title="@string/action_bluetooth_scan_stop"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>
